kubernetes/main/apps/home-automation/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-deny
  namespace: home-automation
spec:
  endpointSelector: {}
  ingress:
    - {}
  egress:
    - {}
